# nova-cpp-test

./: .clang-format  CMakeLists.txt
.github/workflows/: build_and_test.yml  ci.yml
resources/: CMakeLists.txt  data.json
scripts/: format.sh
src/: CMakeLists.txt  json_parser.cpp  json_parser.h  main.cpp  nodes.cpp  nodes.h
tests/: CMakeLists.txt  test_read_json.cpp  tests.cpp
